<resources>
    <string name="app_name">LunchBoxRider</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="hint_pass">Password</string>
    <string name="hint_username">User Email</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="usercnic">CNIC</string>
    <string name="userphone">Phone Number</string>
    <string name="useraddress">Full Address</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="title_activity_billing_details">BillingDetails</string>
</resources>
