<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newimg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/timg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="37dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/left" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <customfonts.MyEditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="22dp"
                android:background="#0000"
                android:hint="@string/fullname"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/textColor" />

            <customfonts.MyEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="22dp"
                android:background="#0000"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/textColor" />

            <customfonts.MyEditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="22dp"
                android:background="#0000"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:maxLength="12"
                android:padding="16dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/textColor" />

            <customfonts.MyEditText
                android:id="@+id/userCnic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="22dp"
                android:background="#0000"
                android:hint="@string/usercnic"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/textColor" />

            <customfonts.MyEditText
                android:id="@+id/userPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="22dp"
                android:background="#0000"
                android:hint="@string/userphone"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/textColor" />

            <customfonts.MyEditText
                android:id="@+id/userAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="22dp"
                android:background="#0000"
                android:hint="@string/useraddress"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@color/textColor" />

            <customfonts.MyTextView
                android:id="@+id/btnsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/angle"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/create"
                android:textColor="@color/colorBackground"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
