<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/newimg"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <customfonts.MyTextView
            android:id="@+id/sin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/dark_blue"
            android:textSize="25sp" />


        <customfonts.MyTextView
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/sin"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/light_white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:background="@drawable/circleangle"
            android:orientation="horizontal"
            android:padding="16dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="1dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/angle2" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/bag" />
            </FrameLayout>

            <customfonts.MyTextView
                android:id="@+id/signupforfree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/sign_up_for_free"
                android:textColor="@color/colorBackground"
                android:textSize="22sp" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>